--- a/src/app/pages/blankcard-acknowledgement/blankcard-acknowledgement.component.html
+++ b/src/app/pages/blankcard-acknowledgement/blankcard-acknowledgement.component.html
@@ -14,7 +14,7 @@
 		</th>
 		<td mat-cell *matCellDef="let row">
 			<mat-checkbox (click)="$event.stopPropagation()" class="example-margin" (change)="updateEach($event,row)"
-				[checked]="selection.isSelected(row)" #checkBox [checked]="row.status" >
+				[checked]="selection.isSelected(row)" #checkBox [checked]="row.acknowledged" >
 			</mat-checkbox>
 		</td> 
 	</ng-container> 
