--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -86,13 +86,13 @@
               <i class="nc-icon nc-favourite-28 text-primary"></i>
             </div>
           </div>
-          <div class="col-7 col-md-8">
+          <!-- <div class="col-7 col-md-8">
             <div class="numbers">
               <p class="card-category">Followers</p>
               <p class="card-title">+45K
                 <p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="card-footer ">
