--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -10,6 +10,7 @@
         </button>
       </div>
       <a class="navbar-brand" href="javascript:void(0)">{{getTitle()}}</a>
+      <a  href="javascript:void(0)"><b>{{getUser()}}</b></a>
     </div>
     <button class="navbar-toggler" type="button" (click)="collapse()"
       [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
@@ -40,6 +41,7 @@
               <span class="d-lg-none d-md-block">Actions</span>
             </p>
           </a>
+          Logout
           <div ngbDropdownMenu aria-labelledby="navbarDropdownMenuLink" class="dropdown-menu dropdown-menu-right">
             <!-- <div class="input-group no-border">
               <button mat-raised-button color="warn"  (click)="confirmDialog()">Logout</button>        
