--- a/src/app/otpinput/otp.input.component.html
+++ b/src/app/otpinput/otp.input.component.html
@@ -23,13 +23,17 @@
     [counter]="setting.timer"
     (value)="onCounterChange($event)"
   >
-    <div>
+    <div style="margin-top: 8px;">      
+
       <button
+        class="btn {{setting.btnClass}}" mat-raised-button color="primary" id="button" class="btn btn-primary" (click)="sumbitOtp()">Submit OTP
+      </button>&nbsp;
+      <button  id="button" mat-raised-button color="warn" 
         class="btn {{setting.btnClass}}"
         [disabled]="counter != 0"
         (click)="ressendOtp()"
       >
-        Resend OTP <span *ngIf="counter != 0">in {{ counter }} seconds.</span>
+        Resend OTP <span *ngIf="counter != 0" style="color:white">in {{ counter }} seconds.</span>
       </button>
     </div>
   </ng-container>
