--- a/src/app/otp/otp.component.html
+++ b/src/app/otp/otp.component.html
@@ -1,7 +1,8 @@
 
-<h3 style="text-align:center;margin-top: 200px;width: 100%;
-display: block;
-font-weight: 600;">Enter Verification Token</h3>
+<div style="text-align:center;margin-top: 200px;">   
+<img src="assets/img/fcmb logo.png" style="width:70px;margin-bottom: 20px;" alt=""> 
+<h3 style="font-weight: 600;margin-top: -1rem;">Enter OTP Token</h3>
+</div>
 <otp
   [setting]="settings"
   (onValueChange)="onInputChange($event)" style="text-align:center;"
