--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -1,11 +1,11 @@
-<h4 style="margin-top: 10px;text-align: center;">Acknowledgement Page</h4>
+<h4 style="margin-top: 10px;text-align: center;">Search Page</h4>
 <div *ngIf="error" class="alert alert-danger">{{error}}</div>
   <div *ngIf="success" class="alert alert-success">{{success}}</div>
 <mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter Acknowledgement Page">
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter Search Page">
 </mat-form-field>
 <br>
-<button (click)="exportAsXLSX()" class="btn btn-secondary mb-2"> Export Excel</button>
+<!-- <button (click)="exportAsXLSX()" class="btn btn-secondary mb-2"> Export Excel</button> -->
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
 
@@ -29,83 +29,28 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Id</b></th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
-    <ng-container matColumnDef="customerid">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>customerId</b> </th>
-      <td mat-cell *matCellDef="let row"> {{row.customerid}} </td>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Name</b> </th>
+      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+    </ng-container>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>description</b> </th>
+      <td mat-cell *matCellDef="let row"> {{row.description}} </td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="accountnumber">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>AccountNo</b> </th>
-      <td mat-cell *matCellDef="let row"> {{row.accountnumber}} </td>
-    </ng-container>
-
-    <!-- customername Column -->
-    <ng-container matColumnDef="customername">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>CustomerName</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.customername}} </td>
-    </ng-container>
-
-     <!-- pan Column -->
-     <ng-container matColumnDef="pan">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b> PAN</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.pan}} </td>
-    </ng-container>
-     <!-- cardtype Column -->
-     <ng-container matColumnDef="foracid">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>AccountNo</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.foracid}} </td>
-    </ng-container>
-
-    <!-- cardtype Column -->
-    <ng-container matColumnDef="cardtype">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>CardType</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.cardtype}} </td>
-    </ng-container>
-    
-    <!-- branchsol Column -->
-    <ng-container matColumnDef="branchsol">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>BranchSol</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.branchsol}} </td>
-    </ng-container>
-
-    <!-- branchname Column -->
-    <ng-container matColumnDef="branchname">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>BranchName</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.branchname}} </td>
-    </ng-container>
-    <!-- datedispatched Column -->
-    <ng-container matColumnDef="datedispatched">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>DateDispatched</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.datedispatched}} </td>
-    </ng-container>
-    <!-- status Column -->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b> Status</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.acknowledgedStatus}} </td>
-    </ng-container>
-    
-    <!-- <ng-container matColumnDef="checked">
-      <th *matHeaderCellDef mat-sort-header>Check</th>
-      <td mat-cell *matCellDef="let row of rows; let i=index">
-        <mat-checkbox #checkBox [checked]="row.status"  (change)=updateCheckedList(row) class="example-margin">{{row.id}}
-        </mat-checkbox>
-      </td>
-    </ng-container>  -->
-    <!-- <ng-container matColumnDef="actions" >
-      <th *matHeaderCellDef mat-sort-header>Actions</th>      
-      <td *matCellDef="let row">
-        <button mat-raised-button color="warn" (click)="editAcknowledge()" class="shift-right">Edit</button>
-      </td>     
+    <!-- <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>description</b> </th>
+      <td mat-cell *matCellDef="let row"> {{row.description}} </td>
     </ng-container> -->
-
+    
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;">
     </tr>
   </table>
 
   <section class="example-section">
-    <button mat-raised-button color="primary" (click)="updateAll()">Update</button>&nbsp;&nbsp;&nbsp;
+    <!-- <button mat-raised-button color="primary" (click)="updateAll()">Update</button>&nbsp;&nbsp;&nbsp; -->
     <button mat-raised-button color="primary" (click)="refresh()">Refresh</button>
   </section>
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
