--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
             </mat-error>
           </mat-form-field>
   
-          <mat-form-field class="example-full-width">
+          <!-- <mat-form-field class="example-full-width">
             <input matInput id="mysecretpassword" placeholder="Password" autocomplete="off" type="password" formControlName="password" required matInput showHideInput>
             <i matSuffix
             class="material-icons"
@@ -30,7 +30,7 @@
             <mat-error *ngIf="isFieldInvalid('userName')">
                 Invalid Password
             </mat-error>
-          </mat-form-field>
+          </mat-form-field> -->
         </mat-card-content>
         <!-- <button mat-stroked-button color="accent" class="btn-block">Sign-in</button> -->
         <button mat-stroked-button color="accent" class="btn-block" (click)="onSubmit">Login</button> 
