--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -34,7 +34,7 @@
       <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>description</b> </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Description</b> </th>
       <td mat-cell *matCellDef="let row"> {{row.description}} </td>
     </ng-container>
 
