--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -31,12 +31,19 @@
     </ng-container>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Name</b> </th>
-      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      <td mat-cell *matCellDef="let row">{{row.name}} </td>
     </ng-container>
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Description</b> </th>
       <td mat-cell *matCellDef="let row"> {{row.description}} </td>
     </ng-container>
+    
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Action</b> </th>
+        <td mat-cell *matCellDef="let row">
+          <a [routerLink] ="['/blankcard/acknowledge/', row.id]" routerLinkActive="router-link-active">View</a>
+        </td>
+      </ng-container>  
 
     <!-- Name Column -->
     <!-- <ng-container matColumnDef="description">
