--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -9,21 +9,6 @@
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
 
-    	<!-- Checkbox Column -->
-    
-   <ng-container matColumnDef="select">
-	 <th mat-header-cell *matHeaderCellDef mat-sort-header>
-			<mat-checkbox (change)="$event ? masterToggle() : null" class="example-margin" [checked]="selection.hasValue() && isAllSelected()"
-				[indeterminate]="selection.hasValue() && !isAllSelected()">
-			</mat-checkbox>
-		</th>
-		<td mat-cell *matCellDef="let row">
-			<mat-checkbox (click)="$event.stopPropagation()" class="example-margin" (change)="updateEach($event,row)"
-				[checked]="selection.isSelected(row)" #checkBox [checked]="row.acknowledgedStatus" >
-			</mat-checkbox>
-		</td> 
-	</ng-container> 
-
     <!-- ID Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Id</b></th>
@@ -41,7 +26,7 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Action</b> </th>
         <td mat-cell *matCellDef="let row">
-          <a [routerLink] ="['/blankcard/acknowledge/', row.id]" routerLinkActive="router-link-active">View</a>
+          <a [routerLink] ="['/analytics/committers/', row.id]" routerLinkActive="router-link-active">View</a>
         </td>
       </ng-container>  
 
