--- a/src/app/pages/analytics/analytics.component.html
+++ b/src/app/pages/analytics/analytics.component.html
@@ -1,1 +1,9 @@
-<p>analytics works!</p>
+
+<nav mat-tab-nav-bar class="navbar navbar-dark bg-dark">
+	<a mat-tab-link *ngFor="let link of navLinks" [routerLink]="link.path" routerLinkActive="active_route">
+		
+		{{link.label}}
+	</a>
+</nav>
+
+<router-outlet></router-outlet>
