--- a/src/app/pages/committer/committer.component.html
+++ b/src/app/pages/committer/committer.component.html
@@ -10,18 +10,18 @@
   <table mat-table [dataSource]="dataSource" matSort>
 
     <!-- ID Column -->
-    <ng-container matColumnDef="id">
+    <!-- <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Id</b></th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-    </ng-container>
+    </ng-container> -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Name</b> </th>
       <td mat-cell *matCellDef="let row">{{row.name}} </td>
     </ng-container>
-    <!-- <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Description</b> </th>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Email</b> </th>
       <td mat-cell *matCellDef="let row"> {{row.description}} </td>
-    </ng-container>      -->
+    </ng-container>     
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;">
     </tr>
