--- a/src/app/pages/committer/committer.component.html
+++ b/src/app/pages/committer/committer.component.html
@@ -1,19 +1,14 @@
-<h4 style="margin-top: 10px;text-align: center;">Search Page</h4>
+<h4 style="margin-top: 10px;text-align: center;">Committer List Page</h4>
 <div *ngIf="error" class="alert alert-danger">{{error}}</div>
   <div *ngIf="success" class="alert alert-success">{{success}}</div>
 <mat-form-field>
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter Search Page">
 </mat-form-field>
 <br>
-<!-- <button (click)="exportAsXLSX()" class="btn btn-secondary mb-2"> Export Excel</button> -->
+
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
 
-    <!-- ID Column -->
-    <!-- <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Id</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-    </ng-container> -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Name</b> </th>
       <td mat-cell *matCellDef="let row">{{row.name}} </td>
@@ -38,7 +33,3 @@
   <p style="color:green;font-size: 16px;">The request is being processed, kindly wait a few seconds. </p>  
 </ngx-spinner> 
 <!-- </form> -->
-
-<!-- Copyright 2018 Google Inc. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at http://angular.io/license -->
