--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <div class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by <a href="">CardTrackers app</a>
+            &copy; {{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by <a href="">GitHubApp</a>
         </div>
     </div>
 </footer>
