--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,11 +3,11 @@
   <div class="logo">
     <a href="" class="simple-text logo-mini">
       <div class="logo-image-small"> 
-        <img src="assets/img/fcmb logo.png" alt="">
+        <img src="assets/img/jakesAjao.jpeg" alt="">
       </div>
     </a>
     <a href="" class="simple-text logo-normal">
-      CardTrackers App
+      GitHub Integration App
     </a>
   </div>
     <ul class="nav">
