--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,25 +14,12 @@
         <form [formGroup]="form" class="example-form" (ngSubmit)="onSubmit()">
         <mat-card-content>
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Username" formControlName="userName" required>
+            <input matInput placeholder="Username" formControlName="userName" placeholder="e.g. technoweenie" required>
             <mat-error *ngIf="isFieldInvalid('userName')">
                 Invalid Username
             </mat-error>
           </mat-form-field>
-  
-          <!-- <mat-form-field class="example-full-width">
-            <input matInput id="mysecretpassword" placeholder="Password" autocomplete="off" type="password" formControlName="password" required matInput showHideInput>
-            <i matSuffix
-            class="material-icons"
-            showHideTrigger="mysecretpassword"
-            [showHideStatus]="{ materialIcon: true, id: 'mysecretpassword' }"
-          ></i>
-            <mat-error *ngIf="isFieldInvalid('userName')">
-                Invalid Password
-            </mat-error>
-          </mat-form-field> -->
-        </mat-card-content>
-        <!-- <button mat-stroked-button color="accent" class="btn-block">Sign-in</button> -->
+          </mat-card-content>
         <button mat-stroked-button color="accent" class="btn-block" (click)="onSubmit">Login</button> 
         
       </form>
